# norman_sdk_python

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  upload_model_test.py
norman/: __init__.py  _app_config.py  norman.py
norman/config_builders/: model_builder.py
norman/helpers/: data_modality_resolver.py  file_transfer_manager.py  flag_helper.py  input_source_resolver.py  parameter_modality_resolver.py  signature_modality_resolver.py
norman/managers/: authentication_manager.py  invocation_manager.py  model_upload_manager.py
norman/objects/configs/: input_source.py  invocation_config.py  invocation_input_config.py  invocation_output_handle.py  invocation_result.py  model_config.py  model_input.py  output_config.py
norman/objects/factories/: aggregate_tag_factory.py  asset_factory.py  invocation_config_factory.py  model_factory.py  model_projection_factory.py  model_version_factory.py  parameter_factory.py  signature_factory.py  tag_factory.py
norman/objects/handlers/: response_handler.py
norman/objects/handles/: invocation_output_handle.py  response_handler.py
norman/resolvers/: flag_status_resolver.py  input_source_resolver.py  parameter_modality_resolver.py  signature_modality_resolver.py
norman/services/: file_transfer_service.py
tests/: conftest.py
tests/assets/model_files/: audio_qa_model.pt  image_qa_model.pt  text_qa_model.pt  video_qa_model.pt
tests/assets/sample_inputs/: sample_input.aac  sample_input.avi  sample_input.mkv  sample_input.mov  sample_input.txt  sample_input.webm  sample_input.wmv
(+41 files in other folders)
