[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "norman-sdk"
version = "0.1.0"
description = "Norman SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "norman_core_sdk @ git+https://github.com/norman-ml/norman_core_sdk_python.git",

    "pyjwt==2.10.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0"
]

[tool.flit.module]
name = "norman"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "accounts: anything to do with account entities",
    "models: anything to do with model entities",
    "invocations: anything to do with invocation entities"
]
